--- a/address-book-test1/.classpath
+++ b/address-book-test1/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/selenium"/>
+	<classpathentry kind="lib" path="D:/selenium-java/selenium-server-standalone-2.47.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
